results/SpecGenBench/4-shot/log-SelectionSortDesc-2023_11_28_01_54_03.txt
public class SelectionSortDesc {

    //@ requires \forall int i; 0 <= i && i < arr.length; (\forall int j; i <= j && j < arr.length; arr[i] >= arr[j]);
    //@ ensures (\forall int i; 0 <= i && i < arr.length - 1; arr[i] >= arr[i+1]);
    public static void selectionSort(int[] arr){  
        for (int i = 0; i < arr.length - 1; i++)  
        {  
            int index = i;  
            //@ maintaining i <= index && index < arr.length;
            //@ maintaining (\forall int j; i <= j && j < index; arr[j] >= arr[index]);
            //@ decreases arr.length - index;
            for (int j = i + 1; j < arr.length; j++){  
                if (arr[j] > arr[index]){  
                    index = j;
                }  
            }  
            int smallerNumber = arr[index];   
            arr[index] = arr[i];  
            arr[i] = smallerNumber;  
        }  
    }
    
}
/home/max/Documents/JMLGPT/tmp/SelectionSortDesc.java:10: error: variable j is already defined in method selectionSort(int[])
            //@ maintaining (\forall int j; i <= j && j < index; arr[j] >= arr[index]);
                                         ^
1 error

